// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Table renders correctly 1`] = `
<jest>
  <table
    class="table"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly small 1`] = `
<jest>
  <table
    class="table table-sm"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly with bordered danger variant 1`] = `
<jest>
  <table
    class="table table-bordered border-danger"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly with borderless style 1`] = `
<jest>
  <table
    class="table table-borderless"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly with caption positioned top 1`] = `
<jest>
  <table
    class="table"
  >
    <caption
      class="caption-top"
    >
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly with hoverable rows 1`] = `
<jest>
  <table
    class="table table-hover"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly with responsive style 1`] = `
<jest>
  <div
    class="table-responsive-sm"
  >
    <table
      class="table"
    >
      <caption>
        List of users
      </caption>
      <thead>
        <tr>
          <td>
            ID
          </td>
          <td>
            Name
          </td>
          <td>
            Description
          </td>
          <td>
            Position
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td>
            Name 1
          </td>
          <td>
            Description 1
          </td>
          <td>
            Position 1
          </td>
        </tr>
        <tr
          class="table-active table-primary"
        >
          <td>
            2
          </td>
          <td>
            Name 2
          </td>
          <td>
            Description 2
          </td>
          <td>
            Position 2
          </td>
        </tr>
        <tr
          class="table-secondary"
        >
          <td>
            3
          </td>
          <td>
            Name 3
          </td>
          <td>
            Description 3
          </td>
          <td>
            Position 3
          </td>
        </tr>
      </tbody>
      <tfoot>
        <tr>
          <td>
            ID
          </td>
          <td>
            Name
          </td>
          <td>
            Description
          </td>
          <td>
            Position
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</jest>
`;

exports[`OE - Table renders correctly with striped rows 1`] = `
<jest>
  <table
    class="table table-striped"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;

exports[`OE - Table renders correctly with variant danger 1`] = `
<jest>
  <table
    class="table table-danger"
  >
    <caption>
      List of users
    </caption>
    <thead>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          1
        </td>
        <td>
          Name 1
        </td>
        <td>
          Description 1
        </td>
        <td>
          Position 1
        </td>
      </tr>
      <tr
        class="table-active table-primary"
      >
        <td>
          2
        </td>
        <td>
          Name 2
        </td>
        <td>
          Description 2
        </td>
        <td>
          Position 2
        </td>
      </tr>
      <tr
        class="table-secondary"
      >
        <td>
          3
        </td>
        <td>
          Name 3
        </td>
        <td>
          Description 3
        </td>
        <td>
          Position 3
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <td>
          ID
        </td>
        <td>
          Name
        </td>
        <td>
          Description
        </td>
        <td>
          Position
        </td>
      </tr>
    </tfoot>
  </table>
</jest>
`;
